# C_OpenGL

./: .gitignore  CMakeLists.txt
include/: camera.h  mesh.h  shader.h  texture.h  texture_helper.h  utils.h
include/glad/: glad.h
shaders/: fragment_shader.frag  vertex_shader.vert
shaders/blackhole/: black_hole.frag  skybox.frag  skybox.vert
src/: camera.c  glad.c  main.c  mesh.c  mesh.h  shader.c  shader.h  shader_helper.c  shader_helper.h  texture_helper.c  utils.c
src/blackhole/: main.c
src/test/: main.c
